--- a/infra/config/prod/monitoring-system/loki/values.yaml
+++ b/infra/config/prod/monitoring-system/loki/values.yaml
@@ -37,3 +37,47 @@ promtail:
     limits:
       cpu: 200m
       memory: 256Mi
+  config:
+    clients:
+      - url: http://loki:3100/loki/api/v1/push
+    scrape_configs:
+      # Backend logs
+      - job_name: backend-logs
+        static_configs:
+          - targets:
+              - localhost
+            labels:
+              job: backend
+              namespace: prod
+              app: backend
+              __path__: /var/log/pods/prod_backend-prod-*/*backend*/0.log
+      # Frontend logs
+      - job_name: frontend-logs
+        static_configs:
+          - targets:
+              - localhost
+            labels:
+              job: frontend
+              namespace: prod
+              app: frontend
+              __path__: /var/log/pods/prod_frontend-prod-*/*frontend*/0.log
+      # Prometheus logs
+      - job_name: prometheus-logs
+        static_configs:
+          - targets:
+              - localhost
+            labels:
+              job: prometheus
+              namespace: prod
+              app: prometheus
+              __path__: /var/log/pods/prod_prometheus-*/*prometheus*/0.log
+      # Grafana logs
+      - job_name: grafana-logs
+        static_configs:
+          - targets:
+              - localhost
+            labels:
+              job: grafana
+              namespace: prod
+              app: grafana
+              __path__: /var/log/pods/prod_*grafana*/*grafana*/0.log
