--- a/infra/addons/backend/templates/secret.yaml
+++ b/infra/addons/backend/templates/secret.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: {{.Values.namespace}}
 type: Opaque
 data:
-  uri: <base64-encoded-placeholder>
-  stripe-secret-key: <base64-encoded-placeholder>
+  uri: "bW9uZ29kYitzcnY6Ly9rYXBpbDAwMTpVc3BHUzdkQWU4bHhiRVZRQGNsdXN0ZXIwLmx6ZnA1bXUubW9uZ29kYi5uZXQvZS1jb21tZXJjZQo="
+  stripe-secret-key: "cGtfdGVzdF81MVJFUDNsREJ4WGh3YTlrMnl6TGJuWWRyOGVTNkR1SG5QOVNic1lvdU5kbGtaUEs4R1JoVmZGMUJoOWlIUjFWejVWd1djMWI1QlVJaktiNXRKdFBNVDZscDAwS2U1eElqU1gK"
