--- a/infra/addons/backend/templates/secret.yaml
+++ b/infra/addons/backend/templates/secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
+data:
+  stripe-secret-key: <YOUR-SECRET>
+  uri: <YOUR-SECRET>
 kind: Secret
 metadata:
+  creationTimestamp: null
   name: backend-secrets
-  namespace: {{.Values.namespace}}
-type: Opaque
-data:
-  uri: "bW9uZ29kYitzcnY6Ly9rYXBpbDAwMTpVc3BHUzdkQWU4bHhiRVZRQGNsdXN0ZXIwLmx6ZnA1bXUubW9uZ29kYi5uZXQvZS1jb21tZXJjZQo="
-  stripe-secret-key: "cGtfdGVzdF81MVJFUDNsREJ4WGh3YTlrMnl6TGJuWWRyOGVTNkR1SG5QOVNic1lvdU5kbGtaUEs4R1JoVmZGMUJoOWlIUjFWejVWd1djMWI1QlVJaktiNXRKdFBNVDZscDAwS2U1eElqU1gK"
+  namespace: dev
