update namespace for FE and BE services

--- a/infra/addons/backend/templates/secret.yaml
+++ b/infra/addons/backend/templates/secret.yaml
@@ -13,4 +13,4 @@ spec:
     metadata:
       creationTimestamp: null
       name: backend-secrets
-      namespace: {{ .Values.namespace }}
+      namespace: {{ .Values.namespace | default .Release.Namespace }}
