--- a/infra/addons/backend/templates/servicemonitor.yaml
+++ b/infra/addons/backend/templates/servicemonitor.yaml
@@ -3,10 +3,10 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ include "backend.fullname" . }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "backend.labels" . | nindent 4 }}
-    release: {{ (printf "prometheus-stack-%s" .Values.namespace) }}
+    release: prometheus-stack-{{ .Values.namespace | default "dev" }}
 spec:
   selector:
     matchLabels:
