--- a/infra/addons/backend/templates/deployment.yaml
+++ b/infra/addons/backend/templates/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   namespace: {{ .Values.namespace | default .Release.Namespace }}
-  name: {{ include "backend.fullname" . }}
+  name: backend-{{ .Release.Namespace }}
   labels:
     {{- include "backend.labels" . | nindent 4 }}
 spec:
