--- a/infra/addons/backend/templates/servicemonitor.yaml
+++ b/infra/addons/backend/templates/servicemonitor.yaml
@@ -2,7 +2,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: {{ include "backend.fullname" . }}
+  name: backend-{{ .Release.Namespace }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "backend.labels" . | nindent 4 }}
