--- a/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
+++ b/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
@@ -1,22 +1,20 @@
+{{- if .Values.kube-prometheus-stack.grafana.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "prometheus-stack.fullname" . }}-grafana
-  namespace: {{ .Values.namespace | default .Release.Namespace }}
-  annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+  name: grafana-ingress
+  labels:
+    app: grafana
 spec:
-  ingressClassName: nginx
   rules:
-  - host: {{ .Values.grafanaHost }}
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: {{ include "prometheus-stack.fullname" . }}-grafana
-            port:
-              number: 80
+    - host: {{ .Values.kube-prometheus-stack.grafana.ingress.hosts | first }}
+      http:
+        paths:
+          - path: {{ .Values.kube-prometheus-stack.grafana.ingress.path | default "/" }}
+            pathType: {{ .Values.kube-prometheus-stack.grafana.ingress.pathType | default "Prefix" }}
+            backend:
+              service:
+                name: {{ .Values.kube-prometheus-stack.grafana.service.name | default "prometheus-stack-grafana" }}
+                port:
+                  number: 80
+{{- end }}
