Fix: Namespace Isolation = Make each node-exporter Service and ServiceMonitor unique per environment

--- a/infra/addons/prometheus-stack/templates/service.yaml
+++ b/infra/addons/prometheus-stack/templates/service.yaml
@@ -1,9 +1,8 @@
-# Service.yaml
 apiVersion: v1
 kind: Service
 metadata:
   name: node-exporter
-  namespace: monitoring
+  namespace: {{ .Values.namespace }}
   labels:
     app: node-exporter
 spec:
