--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -64,9 +64,10 @@ kube-prometheus-stack:
 app:
   serviceMonitors:
     - name: node-exporter
+      namespace: dev
       namespaceSelector:
         matchNames:
-          - monitoring
+          - {{ .Values.namespace }}
       selector:
         matchLabels:
           app: node-exporter
