--- a/infra/config/prod/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/prod/monitoring-system/prometheus-stack/values.yaml
@@ -35,6 +35,7 @@ kube-prometheus-stack:
 app:
   serviceMonitors:
     - name: node-exporter
+      namespace: prod
       namespaceSelector:
         matchNames:
           - monitoring
