--- a/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
+++ b/infra/addons/prometheus-stack/templates/grafana-ingress.yaml
@@ -1,20 +1,25 @@
-# {{- if (index .Values "kube-prometheus-stack").grafana.ingress.enabled }}
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: grafana-ingress
-#   labels:
-#     app: grafana
-# spec:
-#   rules:
-#     - host: {{ (index .Values "kube-prometheus-stack").grafana.ingress.hosts | first }}
-#       http:
-#         paths:
-#           - path: {{ (index .Values "kube-prometheus-stack").grafana.ingress.path | default "/" }}
-#             pathType: {{ (index .Values "kube-prometheus-stack").grafana.ingress.pathType | default "Prefix" }}
-#             backend:
-#               service:
-#                 name: {{ (index .Values "kube-prometheus-stack").grafana.service.name | default "prometheus-stack-grafana" }}
-#                 port:
-#                   number: 80
-# {{- end }}
+{{- if .Values.kube-prometheus-stack.grafana.ingress.enabled }}
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: grafana-ingress
+  labels:
+    app: grafana
+spec:
+  ingressClassName: {{ .Values.kube-prometheus-stack.grafana.ingress.ingressClassName | default "nginx" }}
+  rules:
+    - host: {{ .Values.kube-prometheus-stack.grafana.ingress.hosts | first }}
+      http:
+        paths:
+          - path: {{ .Values.kube-prometheus-stack.grafana.ingress.paths | first | default "/" }}
+            pathType: {{ .Values.kube-prometheus-stack.grafana.ingress.pathType | default "Prefix" }}
+            backend:
+              service:
+                name: {{ .Values.kube-prometheus-stack.grafana.service.name | default "prometheus-stack-grafana" }}
+                port:
+                  number: 80
+  {{- if .Values.kube-prometheus-stack.grafana.ingress.tls }}
+  tls:
+    {{- toYaml .Values.kube-prometheus-stack.grafana.ingress.tls | nindent 4 }}
+  {{- end }}
+{{- end }}
