update  prometheus-node-exporter enabled: false in prometheus-dev

--- a/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
+++ b/infra/config/dev/monitoring-system/prometheus-stack/values.yaml
@@ -20,6 +20,10 @@ tls:
   secretName: grafana-tls
 
 kube-prometheus-stack:
+
+  prometheus-node-exporter:
+    enabled: false
+
   grafana:
     enabled: true
     ingress:
