--- a/infra/addons/prometheus-stack/values.yaml
+++ b/infra/addons/prometheus-stack/values.yaml
@@ -40,8 +40,8 @@ kube-prometheus-stack:
     enabled: false
   
   # Enable node metrics collection
-  prometheus-node-exporter:
-    enabled: false
+  # prometheus-node-exporter:
+    # enabled: false
   
   # Enable Kubernetes state metrics
   kube-state-metrics:
