--- a/infra/addons/frontend/templates/service.yaml
+++ b/infra/addons/frontend/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.services.frontend.enabled | default true }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -18,3 +19,4 @@ spec:
       name: http
   selector:
     {{- include "frontend.selectorLabels" . | nindent 4 }}
+{{- end }}
