--- a/infra/addons/ingress/templates/ingress.yaml
+++ b/infra/addons/ingress/templates/ingress.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.services.ingress.enabled | default true }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -33,3 +34,4 @@ spec:
             port:
               number: {{ .servicePort }}
       {{- end }}
+{{- end }}
