--- a/infra/addons/loki/templates/deployment.yaml
+++ b/infra/addons/loki/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.services.loki.enabled | default true }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -33,3 +34,4 @@ spec:
             name: loki-config
         - name: data
           emptyDir: {}
+{{- end }}
