--- a/infra/addons/loki/templates/service.yaml
+++ b/infra/addons/loki/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.services.loki.enabled | default true }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -10,3 +11,4 @@ spec:
     - protocol: TCP
       port: 3100
       targetPort: 3100
+{{- end }}
