--- a/infra/addons/prometheus-stack/templates/service.yaml
+++ b/infra/addons/prometheus-stack/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.services.prometheus-stack.enabled | default true }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -12,3 +13,4 @@ spec:
     - port: 9100
       targetPort: 9100
       name: http
+{{- end }}
