--- a/infra/addons/prometheus-stack/templates/servicemonitor.yaml
+++ b/infra/addons/prometheus-stack/templates/servicemonitor.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.global.services.prometheus-stack.enabled | default true }}
 # node-exporter-servicemonitor.yaml
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
@@ -16,3 +17,4 @@ spec:
   namespaceSelector:
     matchNames:
       - {{ .Values.namespace}}
+{{- end }}
